Solved tasks Normal

--- a/index.html
+++ b/index.html
@@ -6,12 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
+            max-width: 900px;
             background-color: blueviolet;
+            color: azure;
+        }
+        div {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        ol {
+            line-height: 24px;
+            font-size:16px;
         }
     </style>
     <title>SoftServe_homework-02</title>
 </head>
 <body>
+    <h1>Тема: Типи данних та перемінні</h1>
+<h2>NORMAL</h2>
+<div>
+<ol>
+    <li>Об'єм. </br>
+       Напишіть веб-додаток для розрахунку об'єму циліндра. Користувач вводить висоту циліндра та діаметр основи.
+    </li>
+    <li>Привітання. </br>
+        Запитайте в користувача його ім'я і виведіть у відповідь: "Привіт, його ім'я!".
+    </li>
+    <li>Периметр квадрата. </br>
+        Запитайте у користувача довжину сторони квадрата і виведіть периметр такого квадрата.
+    </li>
+    <li>Швидкість. </br>
+        Запитайте в користувача відстань у км між двома містами та за скільки годин він хоче дістатися. Порахуйте швидкість, з
+    якою необхідно рухатися, щоб встигнути вчасно.
+</li>
+</ol>
+</div>
+<h2>HARD</h2>
+<div>
+    <ol>
+        <li>Навпаки. </br>
+Запитайте у користувача тризначне число і виведіть його задом наперед. Для вирішення завдання вам знадобиться оператор %
+(залишок від ділення).
+</li>
+<li>Температурний помічник. </br>
+Кевін щойно приїхав зі США і не може звикнути до нашої системи вимірювання температури. Напишіть код, де б він міг
+ввести нові для нього градуси в Цельсіях і отримати старі добрі Фаренгейти.
+</li>
+<li>Конвертер кольору. </br>
+Користувач вводить по черзі кольори (червоний, зелений, синій) у вигляді шістнадцяткового запису, а вивести йому цей
+колір у вигляді rgb(12,13,14)
+</li>
+</ol>
+</div>
     <script src="script.js"></script>
 </body>
 
