Added Hard tasks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             font-size:16px;
         }
     </style>
-    <title>SoftServe_homework-02</title>
+    <title>SoftServe_homework_JS intro</title>
 </head>
 <body>
     <h1>Тема: Типи данних та перемінні</h1>
